[package]
name = "logporter"
version = "0.1.0"
edition = "2021"
description = "A simple and lightweight alternative to cAdvisor for getting all basic metrics from Docker containers with support metrics by logs"
license = "MIT"

[dependencies]
bollard = "0.15"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
